--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["crates/wesl-parse", "crates/wesl-test", "crates/wesl-bundle", "crates/wesl-resolve"]
+members = ["crates/wesl-parse", "crates/wesl-test", "crates/wesl-bundle", "crates/wesl-resolve", "crates/wesl-mangle"]
 
 [workspace.package]
 version = "0.0.2"
@@ -26,4 +26,5 @@ clap = { version = "4.5.11", features = ["derive"] }
 wesl-parse = { path = "crates/wesl-parse", version = "0.0.2" }
 wesl-bundle  = { path = "crates/wesl-bundle", version = "0.0.2" }
 wesl-resolve  = { path = "crates/wesl-resolve", version = "0.0.2" }
+wesl-mangle  = { path = "crates/wesl-mangle", version = "0.0.2" }
 tokio = { version="1.40.0", features=["macros", "rt-multi-thread"] }
