--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["crates/wesl-parse", "crates/wesl-test", "crates/wesl-bundle", "crates/wesl-resolve", "crates/wesl-mangle", "crates/wesl-flatten", "crates/wesl-types", "crates/wesl-dealias"]
+members = ["crates/wesl-parse", "crates/wesl-test", "crates/wesl-bundle", "crates/wesl-resolve", "crates/wesl-mangle", "crates/wesl-flatten", "crates/wesl-types", "crates/wesl-dealias", "crates/wesl-template-specialize", "crates/wesl-template-normalize"]
 
 [workspace.package]
 version = "0.0.2"
@@ -31,4 +31,7 @@ wesl-mangle  = { path = "crates/wesl-mangle", version = "0.0.2" }
 wesl-flatten  = { path = "crates/wesl-flatten", version = "0.0.2" }
 wesl-types  = { path = "crates/wesl-types", version = "0.0.2" }
 wesl-dealias  = { path = "crates/wesl-dealias", version = "0.0.2" }
+wesl-template-specialize = {path = "crates/wesl-template-specialize", version = "0.0.2" }
+wesl-template-normalize = { path = "crates/wesl-template-normalize", version = "0.0.2" }
 tokio = { version="1.40.0", features=["macros", "rt-multi-thread"] }
+
