Renamed wesl-template-specialize to wesl-specialize

--- a/crates/wesl-specialize/Cargo.toml
+++ b/crates/wesl-specialize/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "wesl-template-specialize"
+name = "wesl-specialize"
 version.workspace = true
 edition.workspace = true
 authors.workspace = true
